[tool.poetry]
name = "nonebot-alarm"
version = "0.1.0"
description = "自然语言处理的nonebot提醒插件"
authors = ["yanyongyu <https://github.com/yanyongyu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
nonebot = "^1.3"
coconlp = "^0.0.13"
apscheduler = "^3.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
